@@ -1,0 +1,80 @@
+// -*- MPC -*-
+// $Id$
+
+conditional_include "common"
+conditional_include "windowscommon"
+
+configurations     = Debug Release
+common_defines     = WIN32 _CONSOLE _CRT_NONSTDC_NO_WARNINGS
+ConfigurationType  = 1
+SubSystem          = Console
+MinimalRebuild     = false
+
+conditional_include "vc10platforms"
+
+Release {
+  LinkIncremental  = 1
+  optimize         = MaxSpeed
+  defines          = NDEBUG
+  output_dir       = Static_Release
+  intermediate_dir = Static_Release
+  lib_modifier     = s
+  GenerateDebugInformation = false
+}
+
+Debug {
+  debug_prj        = 1
+  defines          = _DEBUG
+  output_dir       = Static_Debug
+  intermediate_dir = Static_Debug
+  lib_modifier     = sd
+}
+
+Memcheck Release {
+  optimize           = MaxSpeed
+  defines            = NDEBUG
+  output_dir         = Static_Release
+  intermediate_dir   = Static_Release
+  lib_modifier       = s
+  BasicRuntimeChecks = 0
+  LinkIncremental    = 1
+  FixedBaseAddress   = 1
+}
+
+Memcheck Debug {
+  debug_prj          = 1
+  defines            = _DEBUG
+  output_dir         = Static_Debug
+  intermediate_dir   = Static_Debug
+  lib_modifier       = sd
+  BasicRuntimeChecks = 0
+  LinkIncremental    = 1
+  FixedBaseAddress   = 1
+}
+
+MFC Release {
+  LinkIncremental   = 1
+  optimize          = MaxSpeed
+  common_defines    = WIN32 _WINDOWS
+  defines           = NDEBUG _AFXDLL
+  output_dir        = Static_MFC_Release
+  intermediate_dir  = Static_MFC_Release
+  lib_modifier      = mfcs
+  UseOfMFC          = Dynamic
+  unicode_mfc_entry = wWinMainCRTStartup
+  GenerateDebugInformation = false
+}
+
+MFC Debug {
+  debug_prj         = 1
+  common_defines    = WIN32 _WINDOWS
+  defines           = _DEBUG _AFXDLL
+  output_dir        = Static_MFC_Debug
+  intermediate_dir  = Static_MFC_Debug
+  lib_modifier      = mfcsd
+  UseOfMFC          = Dynamic
+  unicode_mfc_entry = wWinMainCRTStartup
+}
+
+conditional_include "vcpartialmacros"
+conditional_include "user_vc10libexe"
